RESOLVED FIXED234852
CrashTracer: com.apple.WebKit.Networking at com.apple.WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::cookieAccess
https://bugs.webkit.org/show_bug.cgi?id=234852
Summary CrashTracer: com.apple.WebKit.Networking at com.apple.WebKit: WebKit::Resourc...
Kate Cheney
Reported 2022-01-04 11:50:47 PST
CrashTracer: com.apple.WebKit.Networking at com.apple.WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::cookieAccess
Attachments
Patch (1.91 KB, patch)
2022-01-04 11:53 PST, Kate Cheney
no flags
Patch (6.05 KB, patch)
2022-01-04 12:22 PST, Kate Cheney
no flags
Kate Cheney
Comment 1 2022-01-04 11:53:25 PST
Brent Fulgham
Comment 2 2022-01-04 11:56:40 PST
Comment on attachment 448314 [details] Patch Hah! Good catch. I never noticed that.
Kate Cheney
Comment 3 2022-01-04 12:22:01 PST
Brent Fulgham
Comment 4 2022-01-04 12:25:42 PST
Comment on attachment 448317 [details] Patch R=me
EWS
Comment 5 2022-01-04 13:36:00 PST
Committed r287584 (245713@main): <https://commits.webkit.org/245713@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 448317 [details].
Kate Cheney
Comment 6 2022-01-04 13:37:07 PST
Note You need to log in before you can comment on or make changes to this bug.