CrashTracer: com.apple.WebKit.Networking at com.apple.WebKit: WebKit::ResourceLoadStatisticsDatabaseStore::cookieAccess https://bugs.webkit.org/show_bug.cgi?id=234852 <rdar://problem/87068976>

Reviewed by Brent Fulgham.

Return early if a sqlite statement is null or fails to bind because this
will cause a crash when trying to step. Even in cases where it won't
crash, we should not continue in the function because this may have
undefined behavior.

* NetworkProcess/Classifier/ResourceLoadStatisticsDatabaseStore.cpp:
(WebKit::ResourceLoadStatisticsDatabaseStore::cookieAccess):
(WebKit::ResourceLoadStatisticsDatabaseStore::getThirdPartyDataForSpecificFirstPartyDomains const):
(WebKit::ResourceLoadStatisticsDatabaseStore::clearUserInteraction):
(WebKit::ResourceLoadStatisticsDatabaseStore::includeTodayAsOperatingDateIfNecessary):
(WebKit::ResourceLoadStatisticsDatabaseStore::insertExpiredStatisticForTesting):
* NetworkProcess/PrivateClickMeasurement/PrivateClickMeasurementDatabase.cpp:
(WebKit::PCM::Database::earliestTimesToSend):



Canonical link: https://commits.webkit.org/245713@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287584 268f45cc-cd09-0410-ab3c-d52691b4dbfc